3 investigate microsoft guidance (#4)
Investigation of Guidance. Tutorials and POC for structured output from text. llama-cpp-python==0.2.26 (0.2.60 poor outcome)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 llama-index
 llama-index-llms-huggingface
 llama-index-program-guidance
-llama-cpp-python
+llama-cpp-python==0.2.26 #version 0.2.60 results in inconsistent output
