--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ llama-index-llms-llama-cpp
 llama-index-extractors-entity
 lmql # pip install lmql[hf]
 llama-index-embeddings-huggingface
+outlines
